--- a/templates/HFC/problem_statements_submit.html
+++ b/templates/HFC/problem_statements_submit.html
@@ -32,6 +32,11 @@
                                 {{form.background_info}}
                             </div>
                             <div class="form-field">
+                            <label for="">Proposed Solution</label>
+                                {{form.proposed_solution}}
+                            </div>
+
+                            <div class="form-field">
                                 <label for="">Related Links</label>
                                 {{form.related_link}}
                             </div>
