--- a/templates/HFC/projects_list.html
+++ b/templates/HFC/projects_list.html
@@ -39,10 +39,17 @@
                         </div>
                         <div class="newsletter">
                                 <div class="newsletter__fig"><img src="{% static 'images/news-update.png' %}" alt="Image"></div>
-                                <form action="#" class="newsletter__form">
+                                <form action="https://ctsc-india.us7.list-manage.com/subscribe/post?u=1a02ab21f5eb63b797a40e347&amp;id=72baea4f04" method="post"  target="_blank"  id="mc-embedded-subscribe-form" class="newsletter__form" novalidate>
                                     <p class="large bold">Get Latest Updates!</p>
-                                    <input type="email" placeholder="Enter your email">
-                                    <input class="btn btn--info" type="submit" value="Subscribe">
+                                    <input type="email" placeholder="Enter your email" name= "EMAIL" id="mce-EMAIL">
+                                    <input class="btn btn--info" type="submit"  value="Subscribe">
+                                    <div id="mce-responses" class="clear">
+                                            <div class="response" id="mce-error-response" style="display:none"></div>
+                                            <div class="response" id="mce-success-response" style="display:none"></div>
+                                        </div>
+                                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1a02ab21f5eb63b797a40e347_72baea4f04" tabindex="-1" value=""></div>
+                                    </div>
                                 </form>
                         </div> 
                     </aside><!--sidebar -->
