--- a/templates/HFC/thanks.html
+++ b/templates/HFC/thanks.html
@@ -9,7 +9,7 @@
                 <img src="{% static 'images/thank-you-img.svg' %}"> 
             </div>
             <div class="thanku-heading">
-               <h2>Thanks for signing up.<br>
+               <h2>{{text}}<br>
                 We will get back to you shortly!!!</h2>
                <a class="btn btn--info" href="{% url 'home' %}">Go Home</a> 
            </div>
