--- a/templates/andablog/entry_list.html
+++ b/templates/andablog/entry_list.html
@@ -46,10 +46,10 @@
         {% endfor %}
     </div>
     
-    
+    <!----
     <div class="last-Updates">
         <div class="learn-more"><a href="">Load More</a></div>
-    </div>
+    </div>--->
 </main>
 {% endblock%}
 {% endblock%}
