--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -8,8 +8,17 @@
                 <p class="large bold">Subscribe to our newsletter</p>
             </div>
             <div class="subscription__right">
-                <form action="#" class="subscription__form">
-                    <input type="email" placeholder="Enter your email"><input type="submit" value="Subscribe">
+                    
+                <form action="https://ctsc-india.us7.list-manage.com/subscribe/post?u=1a02ab21f5eb63b797a40e347&amp;id=72baea4f04" method="post"  target="_blank"  id="mc-embedded-subscribe-form" class="subscription__form" novalidate>
+                    <input type="email" placeholder="Enter your email" name= "EMAIL" id="mce-EMAIL" ><input type="submit" id="mc-embedded-subscribe"  value="Subscribe">
+                    <div id="mce-responses" class="clear">
+                        <div class="response" id="mce-error-response" style="display:none"></div>
+                        <div class="response" id="mce-success-response" style="display:none"></div>
+                    </div>
+                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1a02ab21f5eb63b797a40e347_72baea4f04" tabindex="-1" value=""></div>
+                </div>
+                    
                 </form>
             </div>
         </div>
@@ -62,4 +71,7 @@
     </div>
 </div>
 <!--footer end -->
+{% block js%}
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+{%endblock%}
 
