--- a/templates/HFC/about.html
+++ b/templates/HFC/about.html
@@ -54,8 +54,9 @@
                         </div>
                     </div>
                 </section>
-                <a name="ourMission">
-                <section id="ourMission">
+                
+                <section id="ourMission" >
+                    
                         
                     <div class="mission-outer">
                         <h2 class="underline">Coders/Software Engineers</h2>
@@ -84,7 +85,7 @@
                             </div>
                         </div>
                     </div>
-                </section></a>
+                </section>
                 <section id="howItWorks" >
                         <a name="howItWorks">
                     <div class="howItWorks-outer">
@@ -155,3 +156,6 @@
     </div>
     <!--main end -->
     {% endblock %} 
+    {%block js%}
+    
+    {%endblock%}
