--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -55,16 +55,16 @@
             <div class="footer__right">
                 <p class="small bold">Social Media</p>
                 <ul>
-                    <li><a href="#"><img width="30" src="{% static 'images/facebook-icon.svg' %}" alt="Icon"></a></li>
+                    <li><a href="https://www.facebook.com/HackForChange"><img width="30" src="{% static 'images/facebook-icon.svg' %}" alt="Icon"></a></li>
                     <li><a href="#"><img width="35" src="{% static 'images/insta-icon.svg' %}" alt="Icon"></a></li>
-                    <li><a href="#"><img width="31" src="{% static 'images/linkedin-icon.svg' %}" alt="Icon"></a></li>
+                    <li><a href="https://www.linkedin.com/showcase/hack-for-change/about/"><img width="31" src="{% static 'images/linkedin-icon.svg' %}" alt="Icon"></a></li>
                 </ul>
                 <a href="{% url 'donate' %}" class="btn btn--border">Donate</a>
             </div>
         </footer>
         <footer class="footer__copyright">
             <div class="copyright__left">
-                <p>An Initiative By<a href="#"><img width="171" src="{% static 'images/ctsc-logo.svg' %}" alt="logo"></a></p>
+                <p>An Initiative By<a href="https://www.ctsc-india.org/"><img width="171" src="{% static 'images/ctsc-logo.svg' %}" alt="logo"></a></p>
             </div>
             <div class="copyright__right">© Copyright @HackForChange 2020</div>
         </footer>
