--- a/templates/HFC/layout.html
+++ b/templates/HFC/layout.html
@@ -62,7 +62,9 @@
 
 <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
 {%block css %}{%endblock%}
-{% block js %}{% endblock %}
+{% block js %}
+
+{% endblock %}
 
 </body>
 </html>
