--- a/templates/HFC/about.html
+++ b/templates/HFC/about.html
@@ -1,6 +1,6 @@
 {% extends 'HFC/layout.html' %}
 {% load static from staticfiles %}
-{% block title %} About {% endblock %}
+{% block title %} About | Hack For Change {% endblock %}
     
 
 {% block main %}
@@ -52,6 +52,34 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="about-team__outer about-team__outer--third">
+                            <div class="about-team__sec">
+                                <div class="about-team__fig">
+                                    <img width="100" src="{% static 'images/team-men-aki.jpg' %}" alt="Pic">
+                                </div>
+                                <div class="about-team__info">
+                                    <h4>Srinivas Aki <span>Executive Director</span></h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis </p>
+                                </div>
+                            </div>
+                            <div class="about-team__sec">
+                                <div class="about-team__fig">
+                                    <img width="100" src="{% static 'images/team-men-aki.jpg' %}" alt="Pic">
+                                </div>
+                                <div class="about-team__info">
+                                    <h4>Srinivas Aki <span>Executive Director</span></h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis </p>
+                                </div>
+                            </div>
+                            <div class="about-team__sec">
+                                <div class="about-team__fig">
+                                    <img width="100" src="{% static 'images/team-men-aki.jpg' %}" alt="Pic">
+                                </div>
+                                <div class="about-team__info">
+                                    <h4>Srinivas Aki <span>Executive Director</span></h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis </p>
+                                </div>
+                            </div>
                     </div>
                 </section>
                 
