--- a/templates/HFC/hfc_home.html
+++ b/templates/HFC/hfc_home.html
@@ -6,7 +6,7 @@
 <html>
 
     <head>
-        {% block title %}Home{% endblock %}
+        {% block title %}Home | Hack For Change{% endblock %}
     </head>
 
 {% block main %}
