--- a/templates/HFC/problem_discription.html
+++ b/templates/HFC/problem_discription.html
@@ -1,6 +1,6 @@
 {% extends 'HFC/layout.html' %}
 {% load static  %}
-{% block title %} Problem Description {% endblock %}
+{% block title %} Problem Description | Hack For Change {% endblock %}
 
 {% block main %}
 <!--main start -->
