--- a/templates/andablog/entry_list.html
+++ b/templates/andablog/entry_list.html
@@ -44,12 +44,12 @@
             
         </div>
         {% endfor %}
-    </div>
+    </div><br><br>
     
-    <!----
-    <div class="last-Updates">
-        <div class="learn-more"><a href="">Load More</a></div>
-    </div>--->
+    
+   <!---- <div class="last-Updates">
+        <div class="learn-more"><a href=""></a></div>
+    </div>-->
 </main>
 {% endblock%}
 {% endblock%}
