--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -1,6 +1,6 @@
 {% extends 'HFC/layout.html' %}
 {% load static %}
-{% block title %} Community {% endblock %}
+{% block title %} Community | Hack For Change {% endblock %}
 {% block main %}
 <!--Banner start -->
 <div class="banner-wrap">
@@ -16,12 +16,12 @@
 <div id="main-wrap" class="main-wrap--pdb">
         <div class="content-width">
             <ul class="tab-sec">
-                <li class="active"><a href="#hfcCentres"><img width="27" src="{% static 'images/hfc-icon1.svg' %}" alt="ICON"><img width="27" src="{% static 'images/hfc-icon1-alt.svg' %}" alt="ICON"><span>HFC Centres</span></a></li>
+                <li ><a href="#hfcCentres"><img width="27" src="{% static 'images/hfc-icon1.svg' %}" alt="ICON"><img width="27" src="{% static 'images/hfc-icon1-alt.svg' %}" alt="ICON"><span>HFC Centres</span></a></li>
                 <li><a href="#hfcChapters"><img width="48" src="{% static 'images/hfc-icon2.svg' %}" alt="ICON"><img width="48" src="{% static 'images/hfc-icon2-alt.svg' %}" alt="ICON"><span>HFC Chapters</span></a></li>
-                <li><a href="#hfcLeaderboard"><img width="23" src="{% static 'images/hfc-icon3.svg' %}" alt="ICON"><img width="23" src="{% static 'images/hfc-icon3-alt.svg' %}" alt="ICON"><span>Leaderboard</span></a></li>
+                <li class="active"><a href="#hfcLeaderboard"><img width="23" src="{% static 'images/hfc-icon3.svg' %}" alt="ICON"><img width="23" src="{% static 'images/hfc-icon3-alt.svg' %}" alt="ICON"><span>Leaderboard</span></a></li>
             </ul>
             <div class="hfc-outer">
-                    <section class="active" id="hfcCentres">
+                    <section  id="hfcCentres">
                         <div class="main main--community">
                             {% for center in hfc_centers %}
                             <div class="main__community-outer">
@@ -51,13 +51,13 @@
                                 <div class="main__community-sec">
                                     <p class="large sbold">{{chapter.organization_name}}</p>
                                     <p>11 Projects, {{chapter.community_member_set.count}} Members</p>
-                                    <a href="{{chapter.organization_name}}/signup" class="btn btn--border">Join as a Contributor</a>
+                                    <a href="{{chapter.organization_name_slug}}/signup" class="btn btn--border">Join as a Contributor</a>
                                 </div>
                             </div>
                             {% endfor %}
                         </div>
                     </section>
-                    <section id="hfcLeaderboard">
+                    <section class="active" id="hfcLeaderboard">
                         <div class="unborder-table__outer">
                             <table class="unborder-table">
                                 <thead>
@@ -80,7 +80,7 @@
                                                     
                                                         
                                                     
-                                                    <div class="comment-count"><img width="16" src="{% static 'images/badge-icon.svg' %}" alt="Icon">No. of Commits <a href="#">- 15</a></div>
+                                                    <div class="comment-count"><img width="16" src="{% static 'images/badge-icon.svg' %}" alt="Icon">No. of Commits</div>
                                                     <p>Member since 2019</p>
                                                 </div>
                                             </div>
@@ -96,9 +96,9 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="lead-more-btn">
+                     <!----  <div class="lead-more-btn">
                             <a href="#" class="btn btn--border">Load More Leaders</a>
-                        </div>
+                        </div>-->
                         <div class="hfc-card hfc-card--wide">
                             <div class="hfc-card__fig"><img src="{% static 'images/undraw_proud_coder_7ain.png' %}" srcset="images/undraw_proud_coder_7ain@2x.png 2x, images/undraw_proud_coder_7ain@3x.png 3x" alt="Pic"></div>
                             <div class="hfc-card__info">
