--- a/templates/HFC/donate.html
+++ b/templates/HFC/donate.html
@@ -1,6 +1,6 @@
 {% extends 'HFC/layout.html'%}
 {% load static %}
-{% block title %} Donate {% endblock %}
+{% block title %} Donate | Hack For Change {% endblock %}
 {% block main %}
 <!--Banner start -->
 <div class="banner-wrap banner-wrap--dotInside">
