--- a/templates/HFC/mentor_signup.html
+++ b/templates/HFC/mentor_signup.html
@@ -1,6 +1,6 @@
 {% extends 'HFC/layout.html' %}
 {% load static %}
-{% block title %} Mentor Signup {% endblock %}
+{% block title %} Mentor Signup | Hack For Change {% endblock %}
 {% block main %}
 <!--Banner start -->
 <div class="banner-wrap">
@@ -118,12 +118,11 @@
                 <div class="sidebar__member-sec">
                     <p class="sbold">Our Top Mentors</p>
                     <ul class="sidebar__member">
-                        <li><img src="{% static 'images/c-member-img1.jpg' %}" alt="Pic"></li>
-                        <li><img src="{% static 'images/c-member-img2.jpg' %}" alt="Pic"></li>
-                        <li><img src="{% static 'images/c-member-img3.jpg' %}" alt="Pic"></li>
-                        <li><img src="{% static 'images/c-member-img1.jpg' %}" alt="Pic"></li>
-                        <li><img src="{% static 'images/c-member-img2.jpg' %}" alt="Pic"></li>
-                        <li><img src="{% static 'images/c-member-img3.jpg' %}" alt="Pic"></li>
+                        {% for mentor in mentors%}
+                        {% if mentor.image %}
+                        <li><img src= {{mentor.image.url}} alt="Pic"></li>
+                        {% endif %}
+                        {%endfor%}
                     </ul>
                 </div>
                 <div class="newsletter">
