--- a/templates/HFC/privacy_policy.html
+++ b/templates/HFC/privacy_policy.html
@@ -6,7 +6,7 @@
 <div class="banner-wrap">
         <div class="content-width sm-content-width">
             <div class="banner__main">
-                <h1>Privacy Policy</h1>
+                <h1>Privacy Policy | Hack For Change</h1>
                 <p class="large">Lorem ipsum dolor sit amet, consectetur adipiscing sed do eiusmod tempor incididunt ut labore</p>
             </div>
         </div>
