--- a/templates/HFC/problem_statements_submit.html
+++ b/templates/HFC/problem_statements_submit.html
@@ -1,6 +1,6 @@
 {% extends 'HFC/layout.html'%}
 {% load static %}
-{% block title %} Suggest Problem Statement {% endblock %}
+{% block title %} Suggest Problem Statement | Hack For Change {% endblock %}
 {% block main %}
 <!--Banner start -->
 <div class="banner-wrap">
