--- a/templates/HFC/projects_list.html
+++ b/templates/HFC/projects_list.html
@@ -1,7 +1,7 @@
 {% extends 'HFC/layout.html' %}
 {% load static %}
 
-{% block title %} Projects {% endblock %}
+{% block title %} Projects | Hack For Change {% endblock %}
 
 {% block main %}
 <!--Banner start -->
