--- a/templates/HFC/terms_conditions.html
+++ b/templates/HFC/terms_conditions.html
@@ -1,6 +1,6 @@
 {% extends 'HFC/layout.html'%}
 {% load static %}
-{% block title %} Terms and Conditions {% endblock %}
+{% block title %} Terms and Conditions | Hack For Change {% endblock %}
 {% block main %}
 <!--Banner start -->
 <div class="banner-wrap">
