--- a/templates/HFC/thanks.html
+++ b/templates/HFC/thanks.html
@@ -1,6 +1,6 @@
 {% extends 'HFC/layout.html' %}
 {% load static %}
-{% block title %} Thanks {% endblock %}
+{% block title %} Thanks | Hack For Change {% endblock %}
 {% block main %}
 <!-- Main starts -->
 <div class="content-width">
