--- a/templates/andablog/base.html
+++ b/templates/andablog/base.html
@@ -1,6 +1,6 @@
 {% extends "HFC/layout.html" %}
 {% load static %}
-{% block title %}Blog{% endblock %}
+{% block title %}Blog | Hack For Change{% endblock %}
 
 {% block subtitle %}
     {% block andablog_page_title %}
